Fix overflow x

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,9 @@ body {
     display: flex;
     flex-direction: column;
 }
+html, body {
+    overflow-x: hidden;
+}
 
 main {
     padding-top: 20px;
@@ -27,7 +30,7 @@ header {
 }
 
 #header-image {
-    width: 102%;
+    width: 100%;
     height: 310px; /* Slightly larger to extend beyond container */
     object-fit: cover;
     filter: blur(8px) brightness(50%);
@@ -59,6 +62,7 @@ header {
     background-color: #333;
     min-height: 40px;
     vertical-align: center;
+    max-width: 100%;
 }
 
 .toc-list {
@@ -68,6 +72,7 @@ header {
     width: 100%; /* Use full width to ensure proper centering */
     padding: 0;
     margin: 0 auto; /* Center the list if it's not taking full width */
+    max-width: 100%;
 }
 
 .toc-list li {
@@ -79,11 +84,14 @@ header {
     text-decoration: none;
     padding: 10px 15px;
     display: block;
+    max-width: 100%;
+
 }
 
 .toc-list li a:hover,
 .toc-list li a:focus {
     background-color: #555;
+    max-width: 100%;
 }
 
 h1, h2, h3 {
@@ -214,6 +222,9 @@ footer p {
     .toc-list li a {
         width: 100%;  /* Full width for easier tap targets */
         padding: 10px;  /* Increase padding for better tap ability */
+    }
+    .project {
+        width: 100%; /* Ensures the project divs don't overflow */
     }
 }
 
